# GraphicsEditor

./: 2  :w  CMakeLists.txt  Doxyfile  \  build.sh  layout.hpp  layout_sandbox.hpp  log.txt  main  main.cpp  test_text.txt  window_types.hpp
app/: CMakeLists.txt  app.cpp  app.hpp
color_utilities/: CMakeLists.txt  hsvrgb.cpp  hsvrgb.hpp
data_classes/: CMakeLists.txt  data_classes.cpp  data_classes.hpp
docs/: annotated.html  app_8hpp_source.html  classAbstractInstrument-members.html  classAbstractInstrument.html  classAbstractShapeInstrument-members.html  classAbstractShapeInstrument.html  classApp-members.html  classApp.html  classBrush-members.html  classBrush.html  classButtonPressEvent-members.html  classButtonPressEvent.html  classCanvas-members.html  classCanvas.html  classClear-members.html  classClear.html  classColorChangedEvent-members.html  classColorChangedEvent.html  classDialogEndButton-members.html  classDialogEndButton.html  classDialogSaveWindow-members.html  classDialogSaveWindow.html  classDialogWindow-members.html  classDialogWindow.html  classDirectoryEntry-members.html  classDirectoryEntry.html  classDropper-members.html  classDropper.html  classDropperEvent-members.html  classDropperEvent.html  classEllipse-members.html  classEllipse.html  classEraser-members.html  classEraser.html  classEvent-members.html  classEvent.html  classEventQueue-members.html  classEventQueue.html  classFader-members.html  classFader.html  (+168 more)
docs/html/: annotated.html  classApp-members.html  classButtonPressEvent-members.html  classButtonPressEvent.html  classColorChangedEvent-members.html  classEvent.html  classFaderMoveEvent.html  classHUEselector.html  classHueChangedEvent-members.html  classInstrumentManager-members.html  classInstrumentManager.html  classInterfaceClickable.html  classInterfaceDraggable-members.html  classInterfaceDraggable.html  classMouseButtonEvent-members.html  classMouseMoveEvent-members.html  classRectButton-members.html  classRectButton.html  classRectWindow-members.html  classRectWindow.html  classRenderWindow-members.html  classRenderWindow.html  classRenderer-members.html  classRenderer.html  classRootWindow-members.html  classRootWindow.html  classScrollEvent-members.html  classScrollEvent.html  classScrollableText-members.html  classScrollableText.html  classScrollableWindow.html  classScrollbar-members.html  classScrollbar.html  classSlider-members.html  classSlider.html  classSprite-members.html  classTextWindow-members.html  classTextWindow.html  classToolbarListener.html  classWindow-members.html  (+55 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_d.js  functions_0.js  functions_1.js  searchdata.js
docs/latex/: annotated.tex  classAbstractInstrument.eps  classAbstractInstrument.tex  classApp.tex  classButtonPressEvent.eps  classButtonPressEvent.tex  classCanvas.eps  classCanvas.tex  classColorChangedEvent.eps  classColorChangedEvent.tex  classEraser.eps  classEraser.tex  classEvent.eps  classEvent.tex  classEventQueue.tex  classFader.eps  classFader.tex  classFaderMoveEvent.eps  classFaderMoveEvent.tex  classHUEselector.eps  classHUEselector.tex  classHueChangedEvent.eps  classHueChangedEvent.tex  classImage.tex  classInstrumentManager.tex  classInterfaceClickable.eps  classInterfaceClickable.tex  classInterfaceDraggable.eps  classInterfaceDraggable.tex  classMouseButtonEvent.eps  classMouseButtonEvent.tex  classMouseMoveEvent.eps  classMouseMoveEvent.tex  classPencil.eps  classPencil.tex  classRectButton.eps  classRectButton.tex  classRectWindow.eps  classRectWindow.tex  classRenderWindow.eps  (+38 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
event/: CMakeLists.txt  event.cpp  event.hpp
event_queue/: CMakeLists.txt  event_queue.cpp  event_queue.hpp
instruments_manager/: CMakeLists.txt  instruments_manager.cpp  instruments_manager.hpp
layouts/: file_dialog.hpp  file_dialog_window.hpp  macro.hpp  main_layout.hpp
ncurses_engine/: CMakeLists.txt  ncurses_engine.cpp  ncurses_engine.hpp
plugin_api/: api.hpp
render_data/: render_data.hpp
sfml_engine/: CMakeLists.txt  sfml_engine.cpp  sfml_engine.hpp
subscription_manager/: CMakeLists.txt  subscription_manager.cpp  subscription_manager.hpp
window/: CMakeLists.txt  window.cpp  window.hpp
window_base/: CMakeLists.txt  window_base.cpp  window_base.hpp
